--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/style.css">
+    <!-- page styles -->
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- page script -->
+    <script type="module" src="./assets/js/main.js"></script>
+    <!-- page title -->
     <title>Roam: A web game.</title>
 
 </head>
