initial boilerplate css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
 
 </head>
 <body>
-    
+    <div class="pad"></div>
+        <div class = "container container-a">
+            <div class = "item item-a"> <!-- header -->
+                item-a
+            </div>
+            <div class = "item item-b"> <!-- viewport -->
+                item-b
+            </div>
+            <div class = "item item-c"> <!-- character stats -->
+                item-c
+            </div>
+        </div>
+        <div class = "container container-b">
+            <div class = "item item-d"> <!-- console -->
+                item-d
+            </div>
+            <div class = "item item-e"> <!-- inventory -->
+                item-e
+            </div>
+        </div>
+        <footer>
+            footer
+        </footer>
+
 </body>
 </html>
