initial button to item-a

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div class="pad"></div>
         <div class = "container container-a">
             <div class = "item item-a"> <!-- header -->
-                item-a
+                <div class = "button">
+                    Copy Save Code
+                </div>
             </div>
             <div class = "item item-b"> <!-- viewport -->
                 item-b
