rename items to sect. add items to sect-a. adjust css for mobile

--- a/index.html
+++ b/index.html
@@ -14,24 +14,35 @@
 <body>
     <div class="vpad"></div>
         <div class = "container container-a">
-            <div class = "item item-a"> <!-- header -->
-                <div class = "button">
-                    Copy Save Code
+            <div class = "sect sect-a"> <!-- header -->
+                <div class = "item item-a">
+                    Save Game
+                </div>
+                <div class = "item item-b">
+                    Load Game
+                </div>
+                <div class = "item item-c">
+                    New Game
+                </div>
+                <div class = "item item-d">
+                    <img class = "img-title" src="#">
+                </div>
+                
+            </div>
+            <div class = "sect sect-b"> <!-- viewport -->
+                <div class = "item item-e">
+                    <i>Scene Title</i>
                 </div>
             </div>
-            <div class = "item item-b"> <!-- viewport -->
-                item-b
-            </div>
-            <div class = "item item-c"> <!-- character stats -->
-                item-c
+            <div class = "sect sect-c"> <!-- character stats -->
             </div>
         </div>
         <div class = "container container-b">
-            <div class = "item item-d"> <!-- console -->
-                item-d
+            <div class = "sect sect-d"> <!-- console -->
+                sect-d
             </div>
-            <div class = "item item-e"> <!-- inventory -->
-                item-e
+            <div class = "sect sect-e"> <!-- inventory -->
+                sect-e
             </div>
         </div>
         <footer>
