add items to sect-b. style sect-a and footer

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <div class = "item item-c">
                     New Game
                 </div>
+                <div class = "hpad"></div>
                 <div class = "item item-d">
                     <img class = "img-title" src="#">
                 </div>
@@ -35,6 +36,25 @@
                 </div>
             </div>
             <div class = "sect sect-c"> <!-- character stats -->
+                <div class = "item char-art">
+                    <img class = "img-title" src="#">
+                </div>
+                <div class = "item stats">
+                    <div class="stats-sub">
+                        <h3>Adventurer</h1>
+                        <p>
+                            <i>"My fate beckons me..."</i>
+                        </p>
+                    </div>
+                    <div style="width: 5px;"></div>
+                    <div class="stats-sub quip">
+                        statsb
+                    </div>
+                    <div style="width: 5px;"></div>
+                    <div class="stats-sub">
+                        statsc
+                    </div>
+                </div>
             </div>
         </div>
         <div class = "container container-b">
