style misc. initial ribbon and accounts

--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
 
 </head>
 <body>
-    <div class="vpad"></div>
+    <div class="ribbon">
+        <div class = "accounts">
+            Accounts
+        </div>
+    </div>
         <div class = "container container-a">
             <div class = "sect sect-a"> <!-- header -->
-                <div class = "item item-a">
+                <div id = "" class = "item item-a btn">
                     Save Game
                 </div>
-                <div class = "item item-b">
+                <div class = "item item-b btn">
                     Load Game
                 </div>
-                <div class = "item item-c">
+                <div class = "item item-c btn">
                     New Game
                 </div>
                 <div class = "hpad"></div>
@@ -41,13 +45,13 @@
                 </div>
                 <div class = "item stats">
                     <div class="stats-sub">
-                        <h3>Adventurer</h1>
+                        <h3 id="charNameEl">Adventurer</h1>
                         <p>
-                            <i>"My fate beckons me..."</i>
+                            <i id="quipEl">"My fate beckons me..."</i>
                         </p>
                     </div>
                     <div style="width: 5px;"></div>
-                    <div class="stats-sub quip">
+                    <div class="stats-sub">
                         statsb
                     </div>
                     <div style="width: 5px;"></div>
