move accounts to menu

--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 
 </head>
 <body>
-    <div class="ribbon">
-        <div class = "accounts">
-            Accounts
-        </div>
-    </div>
+    <div class="vpad"></div>
         <div class = "container container-a">
-            <div class = "sect sect-a"> <!-- header -->
-                <div id = "" class = "item item-a btn">
+            <div class = "sect menu"> <!-- header -->
+                <div class = "item accounts">
+                    Accounts
+                </div>
+                <div class = "item item-a btn">
                     Save Game
                 </div>
                 <div class = "item item-b btn">
