add parameters and return values to scene methods. add inventory

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                     Accounts
                 </div>
                 <div class = "item item-a btn">
-                    Save Game
+                    Save Progress
                 </div>
                 <div class = "item item-b btn">
-                    Load Game
+                    Load Progress
                 </div>
                 <div class = "item item-c btn">
-                    New Game
+                    Reset Progress
                 </div>
                 <div class = "hpad"></div>
                 <div class = "item item-d">
