refactor class names and element ID names

--- a/index.html
+++ b/index.html
@@ -13,59 +13,59 @@
 </head>
 <body>
     <div class="vpad"></div>
-        <div class = "container container-a">
-            <div class = "sect menu"> <!-- header -->
-                <div class = "item accounts">
+        <div class = "row row-a">
+            <div class = "sect menu-view"> <!-- header -->
+                <div class = "item accounts-btn">
                     Accounts
                 </div>
-                <div class = "item item-a btn">
+                <div class = "item save-btn">
                     Save Progress
                 </div>
-                <div class = "item item-b btn">
+                <div class = "item load-btn">
                     Load Progress
                 </div>
-                <div class = "item item-c btn">
+                <div class = "item reset-btn">
                     Reset Progress
                 </div>
                 <div class = "hpad"></div>
-                <div class = "item item-d">
+                <div class = "item roam-img">
                     <img class = "img-title" src="#">
                 </div>
                 
             </div>
-            <div class = "sect sect-b"> <!-- viewport -->
-                <div class = "item item-e">
+            <div class = "sect scene-view"> <!-- viewport -->
+                <div class = "item title">
                     <i>Scene Title</i>
                 </div>
             </div>
-            <div class = "sect sect-c"> <!-- character stats -->
-                <div class = "item char-art">
+            <div class = "sect char-view"> <!-- character stats -->
+                <div class = "item char-img">
                     <img class = "img-title" src="#">
                 </div>
-                <div class = "item stats">
-                    <div class="stats-sub">
+                <div class = "item stats-txt">
+                    <div class="head-stats">
                         <h3 id="charNameEl">Adventurer</h1>
                         <p>
-                            <i id="quipEl">"My fate beckons me..."</i>
+                            <i id="charQuipEl">"My fate beckons me..."</i>
                         </p>
                     </div>
                     <div style="width: 5px;"></div>
-                    <div class="stats-sub">
-                        statsb
+                    <div class="info1-stats">
+                        stats-a
                     </div>
                     <div style="width: 5px;"></div>
-                    <div class="stats-sub">
-                        statsc
+                    <div class="info2-stats">
+                        stats-b
                     </div>
                 </div>
             </div>
         </div>
-        <div class = "container container-b">
-            <div class = "sect sect-d"> <!-- console -->
-                sect-d
+        <div class = "row row-b">
+            <div class = "sect console-view"> <!-- console -->
+                -
             </div>
-            <div class = "sect sect-e"> <!-- inventory -->
-                sect-e
+            <div class = "sect inv-view"> <!-- inventory -->
+                -
             </div>
         </div>
         <footer>
