add stats to char-view

--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
                     </div>
                     <div style="width: 5px;"></div>
                     <div class="info1-stats">
-                        stats-a
+                        <p><b>health: </b><i id="charHealth">-</i></p>
                     </div>
                     <div style="width: 5px;"></div>
                     <div class="info2-stats">
-                        stats-b
+                        <p><b>STRENGTH: </b><i id="charStrength">-</i></p>
+                        <p><b>SPEED: </b><i id="charSpeed">-</i></p>
+                        <p><b>CUNNING: </b><i id="charCunning">-</i></p>
                     </div>
                 </div>
             </div>
