--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
                 </div>
                 <div class = "item stats-txt">
                     <div class="head-stats">
-                        <h3 id="charNameEl">Adventurer</h1>
+                        <h3 id="charNameEl">-Adventurer-</h1>
                         <p>
-                            <i id="charQuipEl">"My fate beckons me..."</i>
+                            <i id="charQuipEl">"My fate beckons me"</i>
                         </p>
                     </div>
                     <div style="width: 5px;"></div>
                     <div class="info1-stats">
-                        <p><b>health: </b><i id="charHealth">-</i></p>
+                        <p><i><b>health: </b></i><b id="charHealth">-</b></p>
+                        <p><i>STRENGTH: </i><b id="charStrength">-</b></p>
                     </div>
                     <div style="width: 5px;"></div>
                     <div class="info2-stats">
-                        <p><b>STRENGTH: </b><i id="charStrength">-</i></p>
-                        <p><b>SPEED: </b><i id="charSpeed">-</i></p>
-                        <p><b>CUNNING: </b><i id="charCunning">-</i></p>
+                        <p><i>SPEED: </i><b id="charSpeed">-</b></p>
+                        <p><i>CUNNING: </i><b id="charCunning">-</b></p>
                     </div>
                 </div>
             </div>
