--- a/index.html
+++ b/index.html
@@ -64,7 +64,14 @@
         </div>
         <div class = "row row-b">
             <div class = "sect console-view"> <!-- console -->
-                -
+                <div id="consoleLogEl" class = "item log-view">
+
+                </div>
+                <div class = "item log-input">
+                    <input id="typeInputEl" type="text">
+                    <button id="enterInputEl">ENTER</button>
+                </div>
+                
             </div>
             <div class = "sect inv-view"> <!-- inventory -->
                 -
