refactor scene objects, initial interactivity between main.js and scenes.js via console

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
                 </div>
                 
             </div>
-            <div class = "sect scene-view"> <!-- viewport -->
+            <div id="viewportEl" class = "sect scene-view"> <!-- viewport -->
                 <div class = "item title">
                     <i>Scene Title</i>
                 </div>
+                <div id = "optionsEl"></div>
             </div>
             <div class = "sect char-view"> <!-- character stats -->
                 <div class = "item char-img">
