initial fonts and title image. add dullEqual func

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class = "hpad"></div>
                 <div class = "item roam-img">
-                    <img class = "img-title" src="#">
+                    <img class = "img-title" src="./assets/images/RoamTitle(PixelMax).png">
                 </div>
                 
             </div>
@@ -79,7 +79,7 @@
             </div>
         </div>
         <footer>
-            footer
+            <span>Created entirely with Human Intelligence</span>
         </footer>
 
 </body>
