add scene adaption. add character generation. remove inventory

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="vpad"></div>
         <div class = "row row-a">
             <div class = "sect menu-view"> <!-- header -->
-                <div class = "item accounts-btn">
+                <!-- <div class = "item accounts-btn">
                     Accounts
                 </div>
                 <div class = "item save-btn">
@@ -27,7 +27,7 @@
                 <div class = "item reset-btn">
                     Reset Progress
                 </div>
-                <div class = "hpad"></div>
+                <div class = "hpad"></div> -->
                 <div class = "item roam-img">
                     <img class = "img-title" src="./assets/images/RoamTitle(PixelMax).png">
                 </div>
@@ -41,7 +41,7 @@
             </div>
             <div class = "sect char-view"> <!-- character stats -->
                 <div class = "item char-img">
-                    <img class = "img-title" src="#">
+                    <img class = "img-title" src="./assets/images/craiyon_151807_adventurer__medieval___pixel_art.png">
                 </div>
                 <div class = "item stats-txt">
                     <div class="head-stats">
@@ -52,13 +52,13 @@
                     </div>
                     <div style="width: 5px;"></div>
                     <div class="info1-stats">
-                        <p><i><b>health: </b></i><b id="charHealth">-</b></p>
-                        <p><i>STRENGTH: </i><b id="charStrength">-</b></p>
+                        <p><i><b>health: </b></i><b id="charHEA">-</b></p>
+                        <p><i>STRENGTH: </i><b id="charSTR">-</b></p>
                     </div>
                     <div style="width: 5px;"></div>
                     <div class="info2-stats">
-                        <p><i>SPEED: </i><b id="charSpeed">-</b></p>
-                        <p><i>CUNNING: </i><b id="charCunning">-</b></p>
+                        <p><i>SPEED: </i><b id="charSPE">-</b></p>
+                        <p><i>CUNNING: </i><b id="charCUN">-</b></p>
                     </div>
                 </div>
             </div>
@@ -74,12 +74,12 @@
                 </div>
                 
             </div>
-            <div class = "sect inv-view"> <!-- inventory -->
+            <!-- <div class = "sect inv-view">
                 -
-            </div>
+            </div> -->
         </div>
         <footer>
-            <span>Created entirely with Human Intelligence</span>
+            <span>Created by <a href="https://github.com/HerbieJames">Herbie James</a></span>
         </footer>
 
 </body>
