--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- page styles -->
+    <!--page styles-->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- page script -->
+    <!--page script-->
     <script type="module" src="./assets/js/main.js"></script>
-    <!-- page title -->
+    <!--page title-->
     <title>Roam: A web game.</title>
-
+    <!--gun-->
+    <script src="https://cdn.jsdelivr.net/npm/gun/gun.js"></script>
+    <script>
+    gun = GUN();
+    </script>
+    <!--gun end-->
 </head>
 <body>
     <div class="vpad"></div>
@@ -33,15 +38,16 @@
                 </div>
                 
             </div>
-            <div id="viewportEl" class = "sect scene-view"> <!-- viewport -->
-                <div class = "item title">
-                    <i>Scene Title</i>
+            <div class = "sect scene-view"> <!-- viewport -->
+                <div id="viewportEl" class= "scene-item item">
+                    <div class = "item title">
+                        <i id="sceneTitleEl"></i>
+                    </div>
                 </div>
-                <div id = "optionsEl"></div>
             </div>
             <div class = "sect char-view"> <!-- character stats -->
                 <div class = "item char-img">
-                    <img class = "img-title" src="./assets/images/craiyon_151807_adventurer__medieval___pixel_art.png">
+                    <img class = "img-char" src="./assets/images/craiyon_151807_adventurer__medieval___pixel_art.png">
                 </div>
                 <div class = "item stats-txt">
                     <div class="head-stats">
