--- a/index.html
+++ b/index.html
@@ -34,14 +34,11 @@
                 
             </div>
             <div id="viewportEl" class = "sect scene-view"> <!-- viewport -->
-                <div class = "item title">
-                    <i>Scene Title</i>
-                </div>
-                <div id = "optionsEl"></div>
+                <div id = "titleEl" class = "item title"></div>
             </div>
             <div class = "sect char-view"> <!-- character stats -->
                 <div class = "item char-img">
-                    <img class = "img-title" src="./assets/images/craiyon_151807_adventurer__medieval___pixel_art.png">
+                    <img class = "img-title" src="#">
                 </div>
                 <div class = "item stats-txt">
                     <div class="head-stats">
